# fridai-frontend

./: .gitignore  Dockerfile  Makefile  README.md  app.py  pyproject.toml  requirements.txt
app/: app.py
app/i18n/: __init__.py  loader.py  strings_en.yaml  strings_es.yaml
app/pages/: all_tasks.py  categories.py  home.py  next.py  notifications.py  settings.py  tags.py  tasks.py
app/utils/: backend.py  components.py
pages/: all_tasks.py  categories.py  home.py  next.py  notifications.py  settings.py  tags.py  tasks.py
tests/: conftest.py  test_backend_client.py  test_components.py  test_health.py  test_i18n.py  test_pages.py  test_proxy_routes.py  test_task_form.py
utils/: components.py
